fix(): Too large spacing inside the feedback boxes; Add border to the button

--- a/src/_sass/components/_button-fill.scss
+++ b/src/_sass/components/_button-fill.scss
@@ -17,4 +17,12 @@
       color: color(success);
     }
   }
+
+  &--borderable {
+    border: 1px solid color(border-gray-dark);
+
+    @include breakpoint(medium up)  {
+      border: none;
+    }
+  }
 }
